# netlist_converter

./: .gitignore  ASC_README  CMakeLists.txt  README.md  TODO  compile_commands.json
.github/workflows/: c-cpp.yml
example/: net0.asc  net1.asc  net1.txt  net2.asc  net2.txt  net3.asc  net3.txt
inc/: asc_writer.hpp  component_type.hpp  graph.hpp  layoutizer.hpp  line_view.hpp  net_parser.hpp  node.hpp  ogdf_utils.hpp  svg_common.hpp  svg_node_writer.hpp  svg_writer.hpp
src/: CMakeLists.txt  app.cpp  asc_writer.cpp  graph.cpp  layoutizer.cpp  line_view.cpp  logger.hpp  net_parser.cpp  net_parser.hpp  node.cpp  ogdf_utils.cpp  svg_node_writer.cpp  svg_writer.cpp
svg_templates/: offsets
ut/: CMakeLists.txt  fakeogdf.cpp  graph.cpp  layoutizer.cpp  net_parser.cpp  node.cpp
